--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ PyAutoGUI==0.9.52
 pykeyboard==0.1.5
 pymouse==1.0
 PyUserInput==0.1.10
+pywin32==300
 requests==2.26.0
 schedule==1.0.0
 Shapely==1.8.0
+win32gui==221.6
